Update WiredActionExecuteStacks.java